Refactor: Use `List.of` instead of `Collections.singletonList` in `YandexLauncherBadger`.