@@ -8,7 +8,6 @@ import android.os.Bundle;
 import com.modules.shortcut_badger.Badger;
 import com.modules.shortcut_badger.ShortcutBadgeException;
 
-import java.util.Collections;
 import java.util.List;
 
 public class YandexLauncherBadger implements Badger {
@@ -43,6 +42,6 @@ public class YandexLauncherBadger implements Badger {
 
     @Override
     public List<String> getSupportLaunchers() {
-        return Collections.singletonList(PACKAGE_NAME);
+        return List.of(PACKAGE_NAME);
     }
 }
